--- a/diligenciasinternacionalesinc/package.json
+++ b/diligenciasinternacionalesinc/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "pg": "^8.14.1",
     "react": "^19.0.0",
